--- a/comprobantes/application.yml
+++ b/comprobantes/application.yml
@@ -1,19 +1,24 @@
-version: '3.3'
-services:
-  lab02:
-    image: "lab02"
-    build:
-      context: .
-      dockerfile: ./src/main/docker/Dockerfile
-    ports:
-      - 8080:8080
+
+logging.level:
+  root: INFO
+  com.example.lab02.service: DEBUG
+  com.example.lab02.repository: DEBUG
+  org.springframework.jdbc.core: DEBUG
+  org.springframework.jdbc.core.StatementCreatorUtils: DEBUG
+  #org.springframework.web: INFO
+  #com.microsoft: ERROR
+
+server:
+  port: 7071
+
+lab02:
   cache:
-    image: redis:4-alpine
-    command: sh -c 'echo "requirepass password" | redis-server -'
-    ports:
-      - 6379:6379
-  cache-client:
-    image: redis:4-alpine
-    command: redis-cli -h fangorn
-    depends_on:
-      - cache
+    host: localhost
+    port: 6379
+    enableSsl: false
+    password: password
+  event:
+    host: localhost
+    port: 5672
+    username: rabbitmq
+    password: rabbitmq
