--- a/lab01/application.yml
+++ b/lab01/application.yml
@@ -17,7 +17,7 @@ server:
 spring:
   flyway:
     enabled: true
-    url: jdbc:mysql://localhost:3306/db01?allowPublicKeyRetrieval=false&useSSL=true&requireSSL=true&serverTimezone=UTC&encrypt=true&autoReconnect=true
+    url: jdbc:mysql://db:3306/db01?allowPublicKeyRetrieval=false&useSSL=true&requireSSL=true&serverTimezone=UTC&encrypt=true&autoReconnect=true
     user: root
     password: password
     locations: classpath:db/migration/lab01
