--- a/lab01/application.yml
+++ b/lab01/application.yml
@@ -3,7 +3,7 @@
 
 
 logging.level:
-  root: INFO
+  root: ERROR
   com.example.lab01.repository: DEBUG
   org.springframework.jdbc.core: DEBUG
   org.springframework.jdbc.core.StatementCreatorUtils: DEBUG
