--- a/lab01/application.yml
+++ b/lab01/application.yml
@@ -4,9 +4,9 @@
 
 logging.level:
   root: ERROR
-  com.example.lab01.repository: DEBUG
-  org.springframework.jdbc.core: DEBUG
-  org.springframework.jdbc.core.StatementCreatorUtils: DEBUG
+  com.example.lab01.repository: ERROR
+  org.springframework.jdbc.core: ERROR
+  org.springframework.jdbc.core.StatementCreatorUtils: ERROR
   #org.springframework.web: INFO
   #com.microsoft: ERROR
 
