--- a/lab02/application.yml
+++ b/lab02/application.yml
@@ -4,9 +4,9 @@
 
 logging.level:
   root: INFO
-  com.example.lab01.repository: DEBUG
-  org.springframework.jdbc.core: DEBUG
-  org.springframework.jdbc.core.StatementCreatorUtils: DEBUG
+  com.example.lab01.repository: INFO
+  org.springframework.jdbc.core: INFO
+  org.springframework.jdbc.core.StatementCreatorUtils: INFO
   #org.springframework.web: INFO
   #com.microsoft: ERROR
 
