--- a/lab01/application.yml
+++ b/lab01/application.yml
@@ -9,7 +9,12 @@ logging.level:
   org.springframework.jdbc.core.StatementCreatorUtils: ERROR
   #org.springframework.web: INFO
   #com.microsoft: ERROR
-
+  
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
 
 server:
   port: 7070
