--- a/lab05/application.yml
+++ b/lab05/application.yml
@@ -9,8 +9,13 @@ logging.level:
   org.springframework.jdbc.core.StatementCreatorUtils: DEBUG
   #org.springframework.web: INFO
   #com.microsoft: ERROR
-
-
+ 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+        
 server:
   port: 9999
   
