--- a/comprobantes/application.yml
+++ b/comprobantes/application.yml
@@ -13,12 +13,12 @@ server:
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db01
+    url: jdbc:mysql://db:3306/db01
     username: root
     password: password
   flyway:
   enabled: true
-  url: jdbc:mysql://localhost:3306/db01?allowPublicKeyRetrieval=false&useSSL=true&requireSSL=true&serverTimezone=UTC&encrypt=true&autoReconnect=true
+  url: jdbc:mysql://db:3306/db01?allowPublicKeyRetrieval=false&useSSL=true&requireSSL=true&serverTimezone=UTC&encrypt=true&autoReconnect=true
   user: root
   password: password
   locations: classpath:db/migration
